--- a/Talleres/Taller_MarkDown/19-04-2023.md
+++ b/Talleres/Taller_MarkDown/19-04-2023.md
@@ -3,23 +3,39 @@
 1. **¿Que es la programación?**
 
     La programación es el proceso de crear un conjunto de instrucciones que le dicen a una computadora como realizar algún tipo de tarea. Pero no solo la acción de escribir un código para que la computadora o el software lo ejecute.
+    
+    [**Portal de investdigacion**](https://es.wikipedia.org/wiki/Programaci%C3%B3n)
 
 1. **¿Que es el desarrollo web?**
 
     El desarrollo web es un proceso complejo que implica la creación de productos digitales en línea.​ También es un término que define la creación de sitios web para Internet o una intranet. 
 
+    [**Portal de investigacion**](https://es.wikipedia.org/wiki/Desarrollo_web)
+
 1. **¿Qué cosas debe aprender un programador?**
 
-    Claras destrezas para comunicarse
-    Apropiado manejo para la resolucion de problemas
-    entender el tema de las versiones y compatibilidad
-    Destreza para el aprendizaje
-    Comprender lenguajes de programacion
-    Saber encontrar bugs.
-    Ejercitar el pensamiento lógico. 
-    Instruirse con algoritmos y estructuras de datos.
-    Conocimientos avanzados de sistemas operativos.
-    Elaborar trabajos prácticos.
+    -Claras destrezas para comunicarse
+
+    -Apropiado manejo para la resolucion de problemas
+
+    -entender el tema de las versiones y compatibilidad
+
+    -Destreza para el aprendizaje
+
+    -Comprender lenguajes de programacion
+
+    -Saber encontrar bugs.
+
+    -Ejercitar el pensamiento lógico. 
+
+    -Instruirse con algoritmos y estructuras de datos.
+
+    -Conocimientos avanzados de sistemas operativos.
+
+    -Elaborar trabajos prácticos.
+
+    [**portal de investigaciones**](https://www.euroinnova.co/blog/que-se-necesita-para-ser-programador)
+
 
 1. **¿Qué clase de trabajos realiza un programador?**
 
@@ -39,12 +55,18 @@
 
     -También está facultado para escribir, depurar y comprobar todo el código fuente de un software informático, con el objetivo de llevar a feliz término las tareas señaladas, mejorándolas, e incorporando nuevas funciones para hacer que sea una herramienta útil, completa y eficiente.
 
+    [**Portal de investdigacion**](https://www.indeed.com/orientacion-profesional/como-encontrar-empleo/que-hace-programador-como-convertirte)
+
 1. **¿Qué es FRONTEND y BACKEND?**
 
     *FRONTEND:* El desarrollo web front-end consiste en la conversión de datos en una interfaz gráfica para que el usuario pueda ver e interactuar con la información de forma digital usando HTML, CSS y JavaScript.
+    
+    [**Portal de investdigacion**](https://es.wikipedia.org/wiki/Desarrollo_web_Front-end)
 
     *BACKEND:* es la parte del desarrollo web que se encarga de que toda la lógica de una página web funcione. Se trata del conjunto de acciones que pasan en una web pero que no vemos como, por ejemplo, la comunicación con el servidor.
-
+    
+    [**Portal de investdigacion**](https://nestrategia.com/desarrollo-web-back-end-front-end/#:~:text=En%20otras%20palabras%2C%20el%20Back,la%20comunicaci%C3%B3n%20con%20el%20servidor.)
+    
 1. **¿Qué son los niveles de desarrollo Junior, semi-Senior y Senior?**
 
     *Junior:* Ser desarrollador junior significa que no eres un pasante o practicante, sino que estás en un punto donde ya sabes programar, quizá no con las mejores prácticas por lo que aún se te brinda supervisión para realizar tu trabajo. Conoces por lo menos un lenguaje de programación, y se te dan tareas específicas pues aún requieres de conocimientos y habilidades para dimensionar los proyectos y su desarrollo.
@@ -53,17 +75,25 @@
 
     *Senior:* Para alcanzar el nivel senior, no solamente bastan las capacidades que ya te mencioné en los niveles junior y semi senior, sino también de habilidades enfocadas a la gestión, es decir, debes ser capaz de manejar equipos de trabajo e integrar los objetivos de desarrollo con los de la empresa. Además de que debes ser apto para asesorar a desarrolladores junior y semi senior, así como a hacer revisiones periódicas del código, para mejorar su calidad y estructura.
 
+    [**Portal de investdigacion**](https://ed.team/blog/senior-vs-junior-niveles-de-programadores)
+
 1. **¿Qué es un framework?**
 
     Un entorno de trabajo​ o marco de trabajo​ es un conjunto estandarizado de conceptos, prácticas y criterios para enfocar un tipo de problemática particular que sirve como referencia, para enfrentar y resolver nuevos problemas de índole similar.
 
+    [**Portal de investdigacion**](https://es.wikipedia.org/wiki/Framework)
+
 1. **¿Qué es una librería?**
 
-    on conjuntos de archivos de código que se utilizan para desarrollar software. Su objetivo es facilitar la programación, al proporcionar funcionalidades comunes, que ya han sido resueltas previamente por otros programadores.
+    Son conjuntos de archivos de código que se utilizan para desarrollar software. Su objetivo es facilitar la programación, al proporcionar funcionalidades comunes, que ya han sido resueltas previamente por otros programadores.
+
+    [**Portal de investdigacion**](https://datos.gob.es/es/blog/11-librerias-para-crear-visualizaciones-de-datos#:~:text=Las%20librer%C3%ADas%20de%20programaci%C3%B3n%20son,resueltas%20previamente%20por%20otros%20programadores.)
 
 1. **¿Cuánto tiempo tarda una persona en aprender un lenguaje de programación?**
 
     Es posible estimar que aprender programar a un nivel básico, te llevará aproximadamente entre unos 8 y 12 meses.
+
+    [**Portal de investdigacion**](https://keepcoding.io/blog/cuanto-se-tarda-en-aprender-a-programar/#:~:text=Sin%20embargo%2C%20una%20buena%20estimaci%C3%B3n,par%20de%20lenguajes%20de%20programaci%C3%B3n.)
 
 1. **¿Qué es un STACK en desarrollo, agregue una imagen con diferentes STACK?**
 
@@ -74,6 +104,8 @@
     Por ejemplo, un stack de web suele tener el siguiente aspecto:
 
     ![imagen](https://www.syntonize.com/wp-content/uploads/2022/04/Stack-web.png)
+
+    [**Portal de investdigacion**](https://www.syntonize.com/stack-tecnologico-que-es-y-como-crear-uno/#:~:text=Un%20stack%20tecnol%C3%B3gico%20es%20un,desarrollo%20y%20enfoques%20de%20programaci%C3%B3n.)
 
 1. **¿Cuáles son los lenguajes de programación más demandados en el mercado colombiano?**
 
@@ -87,7 +119,9 @@
     1. C# (27.525)
     1. Objective C (25.082)
     1. Ruby (13.279)
-    
+
+    [**Portal de investdigacion**](https://www.enter.co/especiales/dev/herramientas-dev/los-10-lenguajes-de-programacion-mas-pedidos-por-reclutadores-tec/)
+
 1. **¿Cuáles son los lenguajes de programación más demandados en el mercado Internacional?**
 
     1. Python
@@ -96,15 +130,126 @@
     1. Java
     1. C
 
+    [**Portal de investdigacion**](https://keepcoding.io/blog/lenguajes-de-programacion-mas-demandados/)
+
 1. **¿Cuánto puede ganar un desarrollador FrontEnd?**
+
+    $44.536.458 de pesos por año
+
+    [**Portal de investdigacion**](https://co.indeed.com/career/programador-front-end/salaries)
+
 1. **¿Cuánto puede ganar un desarrollador BackEnd?**
+
+    $54.000.000 de pesos por año
+
+    [**Portal de investdigacion**](https://co.talent.com/salary?job=desarrollador+backend)
+
 1. **¿Cuáles son los requisitos para ser desarrollador FrontEnd?**
+
+    -Conocer HTML5 y CSS. HyperText Markup Language, es el componente estructural clave de todas las páginas webs que se encuentran en internet. Y el Cascading Style Sheets es lo que le proporciona estilo a HTML.
+    
+    -Conocimientos en Javascript.Gracias a JS se podrá conseguir una página web interactiva.
+    
+    -Saber utilizar un CMS, por ejemplo podría utilizar WordPress. 
+    
+    -Ser creativo.
+    
+    -Tener conocimientos de diseño.
+    
+    -Conocer el trabajo de un diseñador web y de un desarrollador back-end. 
+
+    [**Portal de investdigacion**](https://www.iebschool.com/blog/funciones-front-end-developer-analitica-usabilidad/)
+
 1. **¿Cuáles son los requisitos para ser desarrollador BackEnd?**
+
+    -Conocer los lenguajes de programación más usados
+
+    -Tener un enfoque sistémico
+
+    -Crear CMS desde cero o depurar y añadir nuevas funciones a uno ya existente
+
+    -Conocimiento sobre estructuras de datos
+
+    -Dominio de algoritmos
+
+    -Saber usar la memoria caché
+
+    -Detección de errores
+
+    -Conocer los servidores
+
+    -Capacidad de resolución de problemas
+
+    -Saber comunicarse y trabajar en equipo
+
+    -Conocer las API (Interfaz del programa de aplicación)
+
+    -Manejar el Sistema de Control de Versiones
+
+    [**Portal de investdigacion**](https://talently.tech/blog/skills-para-ser-desarrollador-backend/)
+
 1. **¿Qué es la metodología SCRUM y AGILE?**
+
+    *SCRUM:* es una técnica de la metodología ágil ampliada que ofrece una forma de conectar varios equipos que necesitan trabajar juntos para ofrecer soluciones complejas.
+    ![SCRUM](https://blog.wearedrew.co/hubfs/metodolog%C3%ADa%20scrum.png)
+    [**Portal de investdigacion**](https://atlassian.com/es/agile/scrum#:~:text=Scrum%20de%20scrums%20es%20una,juntos%20para%20ofrecer%20soluciones%20complejas.)
+
+    *AGILE:* es mucho más que una metodología para el desarrollo de proyectos que precisan de rapidez y flexibilidad, es una filosofía que supone una forma distinta de trabajar y de organizarse. De tal forma que cada proyecto se ‘trocea’ en pequeñas partes que tienen que completarse y entregarse en pocas semanas. El objetivo es desarrollar productos y servicios de calidad que respondan a las necesidades de unos clientes cuyas prioridades cambian a una velocidad cada vez mayor.
+    ![AGILE](https://www.santaluciaimpulsa.es/wp-content/uploads/2021/02/metodologia-agile-1.png)
+
+    [**Portal de investdigacion**](https://www.bbva.com/es/innovacion/metodologia-agile-la-revolucion-las-formas-trabajo/)
+
 1. **¿Qué es TESTING?**
+
+    El Testing de Software es toda una disciplina en la ingeniería de software permite tener procesos, métodos de trabajo y herramientas para identificar defectos en el software alcanzando un proceso de estabilidad del mismo.
+
+    [**Portal de investdigacion**](https://pacifitic.org/que-es-el-testing-de-software-y-por-que-es-tan-importante-en-el-desarrollo-de-software/#:~:text=El%20Testing%20de%20Software%20es,proceso%20de%20estabilidad%20del%20mismo.)
+
 1. **¿Cuáles son los roles en el desarrollo de software?**
+
+    **El analista empresarial:** El rol de analista empresarial incluye las siguientes responsabilidades en la fase de descubrimiento y planificación:
+    
+    -Identificación de las necesidades del cliente y de la empresa.
+    
+    -Captura de los requisitos (a menudo en forma de lenguaje natural o en texto sin formato).
+    
+    -Creación de casos para su utilización empresarial, búsqueda de áreas para la optimización dentro de las aplicaciones empresariales existentes, especialmente en aquellas áreas que pueden automatizarse o ser integradas por el diseño de software y de procesos.
+    
+    ---
+
+    **El desarrollador de aplicaciones:** El rol desarrollador de aplicaciones es responsable del desarrollo de los servicios empresariales, concentrándose en los aspectos funcionales de la aplicación.
+
+    El rol del desarrollador de aplicaciones puede cubrir un amplio espectro de responsabilidades, de acuerdo con los tipos de aplicaciones que se estén ejecutando en los sistemas de información empresarial.
+
+    En situaciones de utilización de proyectos de flujo de servicios, el rol de desarrollador de aplicaciones puede abarcar los siguientes tipos de desarrollador:
+
+    -Desarrollador de aplicaciones de sistema principal
+    Este rol de desarrollador incluye programadores de sistemas principales tradicionales con habilidades críticas, pero que pueden no tener experiencia en lenguajes de programación más recientes, como Java™.
+
+    El desarrollador de aplicaciones de sistema principal debe tener experiencia en al menos algunas de las siguientes áreas:
+    -Programación en COBOL
+
+    -Programación en C++
+
+    -Programación de aplicaciones CICS
+
+    -Programación de aplicaciones IMS
+
+    -Desarrollo de aplicaciones ISPF
+
+    -PL/I
+
+    -RPG
+
+    -Lenguaje de programación C
+
+    ---
+
+    **El desplegador de soluciones** El rol de desplegador de soluciones está centrado en el despliegue y gestión de la solución. Una vez iniciado, el despliegue de la solución debe ser supervisado y analizado de forma constante y, si es necesario, debe modificarse la estrategia de despliegue para cumplir las necesidades empresariales.
+
+    [**Portal de investdigacion**](https://www.ibm.com/docs/es/developer-for-zos/9.5.1?topic=overview-user-roles)
+
 1. **¿Cuál es el camino que deseas seguir? ¿Desarrollador FrontEnd o Desarrollador BackEnd?**
 
-
-https://ed.team/blog/senior-vs-junior-niveles-de-programadores
-https://www.hackaboss.com/blog/cuanto-se-tarda-en-aprender-a-programar#:~:text=Si%20quieres%20una%20respuesta%20m%C3%A1s,unos%208%20y%2012%20meses.
+    Desarrollador FRONTEND
+    
